--- a/index.html
+++ b/index.html
@@ -11,11 +11,12 @@
 <img src="foto6.jpeg"alt="Image" height="200" width="300">
 
 
-<h1> PARA OS MEUS QUERIDOS ALUNOS QUE ESTÃO MELHORANDO A CADA DIA E SE TORNANDO PESSOAS MELHORES </h1>
+<h1> Não se mate, se não sua vida acaba </h1>
 
 
-<h2>FELIZ DIA DOS ESTUDANTES</h2>
+<h2> O meu suícidio tanto faz, já o seu, eu irei mover céus e terra para impedir </h2>
 
-<h3>VOCÊS SABEM QUE EU POSSO NÃO SER O MELHOR PROFESSOR DO MUNDO, talvez seja kkk, MAS BUSCO A CADA DIA ESTAR MELHORANDO PARA PODER AJUDAR AQUELES QUE CONSIDERO COMO FILHOS E QUERO QUE TENHAM UM FUTURO MARAVILHOSO </h3>
+<h3> Dentro de nós sempre tem algo criativo, basta pensar, planejar e prodozir </h3>
 
-<h4> COM CARINHO, DE SEU PROFESSOR GÉVERSON  </H4>
+<h4> Tõ feliz, acredita? OLha só a ironia, fui buscar o amor e já tinha, fui tentar ser feliz e já era.
+  Fui tentar me encontrar e me perdi, e que loucura, precisei me perder para me valorizar </H4>
