--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <center>
 
-<img src="foto1.jpeg"alt="Image" height="200" width="300">
+<img src="foto 1"alt="Image" height="200" width="300">
 
 <img src="foto3.jpeg"alt="Image" height="200" width="300">
 
